# T8Spectrum

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: spectra_comparison.py
t8_client/: cli.py  get_data.py  main.py  spectrum.py  url_params.py  waveform.py
t8_client/util/: csv.py  decoder.py  plots.py  timestamp.py
t8spectrum/: get_data.py  main.py  spectrum.py  url_params.py  waveform.py
t8spectrum/util/: decoder.py  plots.py
tests/: test_decoder.py  test_get_data.py  test_timestamp.py
